5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1638_2449.log
== TEST (2019-04-11 11:01:23) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))
d = int(input("Digite o valor de d: "))
f = int(input("Digite o valor de f: "))
c = (a * x) + (b * y)
f = (d * x) + (e * y)
var = (a * e) - (b * d)
x = (c * e) - (b * f) / var
y = (a * f) - (c * d) / var
if (var = 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 11
    if (var = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:26) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
f = float(input("Digite o valor de f: "))
c = (a * x) + (b * y)
f = (d * x) + (e * y)
var = (a * e) - (b * d)
x = (c * e) - (b * f) / var
y = (a * f) - (c * d) / var
if (var = 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 11
    if (var = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:40) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
f = float(input("Digite o valor de f: "))
c = (a * x) + (b * y)
f = (d * x) + (e * y)
var = (a * e) - (b * d)
x = (c * e) - (b * f) / var
y = (a * f) - (c * d) / var
if (var == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = (a * x) + (b * y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:06:32) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
f = float(input("Digite o valor de f: "))
var = (a * e) - (b * d)
x = (c * e) - (b * f) / var
y = (a * f) - (c * d) / var
c = (a * x) + (b * y)
f = (d * x) + (e * y)
if (var == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var = (a * e) - (b * d)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:34) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
f = float(input("Digite o valor de f: "))
x = (c * e) - (b * f) / var
y = (a * f) - (c * d) / var
var = (a * e) - (b * d)
if (var == 0):
	print("Nao tem solucao")
else:
	msg1 = x / var
	print(msg1)
	msg2 = y / var
	print(mag2)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (c * e) - (b * f) / var
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:49) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
f = float(input("Digite o valor de f: "))
x = (c * e) - (b * f) / var
y = (a * f) - (c * d) / var
var = (a * e) - (b * d)
if (var == 0):
	print("Nao tem solucao")
else:
	msg1 = x / var
	print(msg1)
	msg2 = y / var
	print(mag2)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (c * e) - (b * f) / var
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:18:50) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
e = float(input("Digite o valor de e: "))
f = float(input("Digite o valor de f: "))
x = (c * e) - (b * f)
y = (a * f) - (c * d)
var = (a * e) - (b * d)
if (var == 0):
	print("Nao tem solucao")
else:
	msg1 = x / var
	print(msg1)
	msg2 = y / var
	print(mag2)
	

	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:19:11) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
e = float(input("Digite o valor de e: "))
f = float(input("Digite o valor de f: "))
x = (c * e) - (b * f)
y = (a * f) - (c * d)
var = (a * e) - (b * d)
if (var == 0):
	print("Nao tem solucao")
else:
	msg1 = x / var
	print(msg1)
	msg2 = y / var
	print(msg2)
	

	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:19:24) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))
d = float(input("Digite o valor de d: "))
e = float(input("Digite o valor de e: "))
f = float(input("Digite o valor de f: "))
x = (c * e) - (b * f)
y = (a * f) - (c * d)
var = (a * e) - (b * d)
if (var == 0):
	print("Nao tem solucao")
else:
	msg1 = x / var
	print(msg1)
	msg2 = y / var
	print(msg2)
	

	
-- EXECUTION TIME:
0.20301
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
